# unix-form-read

./: Cargo.toml  README.md  TODO.md  analysis.json  analysis.txt  analyze.sh  manual.json  residual.json  strings.json
distr/: form_names  form_names_rc
src/: main.rs
